Staff edit and delete students, reports module Accounts controller splitting and other refactorings Optimize file structure

--- a/SchoolWeb/appsettings.json
+++ b/SchoolWeb/appsettings.json
@@ -19,7 +19,7 @@
     "NameFrom": "SchoolWeb",
     "From": "___francisco.rosa.21674@formandos.cinel.pt",
     "Smtp": "___smtp.office365.com",
-    "Port": "587",
+    "Port": "___587",
     "Password": "___"
   }
 }
