--- a/SchoolWeb/appsettings.json
+++ b/SchoolWeb/appsettings.json
@@ -17,9 +17,9 @@
   },
   "Mail": {
     "NameFrom": "SchoolWeb",
-    "From": "___francisco.rosa.21674@formandos.cinel.pt",
-    "Smtp": "___smtp.office365.com",
-    "Port": "___587",
-    "Password": "___"
+    "From": "__francisco.rosa.21674@formandos.cinel.pt",
+    "Smtp": "__smtp.office365.com",
+    "Port": "__587",
+    "Password": "__"
   }
 }
