Add CultureInfo and fix SelectListItem

--- a/SchoolWeb/appsettings.json
+++ b/SchoolWeb/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SchoolWeb;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=tcp:schoolwebdbserver.database.windows.net,1433;Initial Catalog=SchoolWeb_db;User Id=frnuno@schoolwebdbserver;Password=!Admin12"
   },
   "Tokens": {
     "Key": "nVKMs3zNNvM3Wq2ICgHVgEO0oLCFIen3",
